# yampa-canvas-explorations

./: CHANGELOG.md  yampa-canvas-explorations.cabal
app/: BufferModification.hs  ImageDataModification.hs  LineModification.hs  Main.hs
app/Buffer/: PixelCanvas.hs
app/canvas/: PixelCanvas.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
